fixing spacing

--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -35,7 +35,7 @@
 
     @include mq(lg) {
       margin-bottom: 1em;
-      font-size: 0.5rem;
+      font-size: 0.6rem;
     }
   }
 }
