--- a/src/styles/Auth.module.scss
+++ b/src/styles/Auth.module.scss
@@ -262,6 +262,6 @@
 
   @include mq(lg) {
     font-size: 0.9rem;
-    margin-bottom: 1em;
+    margin: 0.25em 0 1.15em;
   }
 }
